# MASTER-THESIS-SM

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
data/dataset/: skill_embeddings.npz  stats.json
data/embeddings/: jobs_embeddings.parquet  programmes_embeddings.parquet
data/raw/esco/: README.md
experiments/results/: programme_job_mapping.csv  programme_job_mapping_baseline.csv
experiments/results/ablation/: FINDINGS.md  ablation_results.json
experiments/results/evaluation/: embedding_comparison.json  per_programme.parquet  stability.json  summary.json
experiments/results/exp1_symbolic/: rankings.parquet  skill_gaps.parquet  summary.json
experiments/results/exp1_symbolic_weighted/: Findings.md  rankings.parquet  skill_gaps.parquet  summary.json
experiments/results/exp2_semantic/: rankings.parquet  summary.json
experiments/results/exp3_hybrid/: FINDINGS.md  rankings.parquet  summary.json
experiments/results/exports/: programme_job_mapping.csv  programme_job_mapping_20260412_122515.csv  programme_job_mapping_20260412_124249.csv  programme_job_mapping_20260412_125054.csv  programme_job_mapping_20260412_140812.csv  programme_job_mapping_20260414_101615.csv  programme_job_mapping_20260414_102301.csv  programme_job_mapping_20260414_104840.csv  programme_job_mapping_20260414_113350.csv  programme_job_mapping_20260415_114659.csv  programme_job_mapping_20260421_222538.csv  programme_job_mapping_pre_step28_29.csv
experiments/results/impact_comparison/: FINDINGS.md  comparison_summary.json  rankings_A_baseline.parquet  rankings_B_desc_emb.parquet  (+4 more)
src/: dataset_builder.py  export_results.py  pipeline.py
src/alignment/: bm25_baseline.py  hybrid.py  semantic.py  symbolic.py
src/clustering/: clusterer.py  job_clustering.py  programme_clustering.py
src/embeddings/: generator.py
src/evaluation/: ablation.py  cluster_analysis.py  coverage.py  cross_strategy.py  formula_tuning.py  impact_comparison.py  ir_metrics.py  sensitivity.py  significance.py  stability.py
src/preprocessing/: deduplication.py  language.py  pipeline.py  text_cleaner.py  translate.py
src/recommendations/: generator.py
src/scraping/: base.py  config.py  job_ads.py  lama_bpo.py  linkedin.py  linkedin_auxiliary.py  models.py  university_sites.py
src/skills/: esco_loader.py  explicit_extractor.py  implicit_extractor.py  skill_filter.py  skill_mapper.py  skill_weights.py  verify.py
tests/: conftest.py
tests/alignment/: test_bm25_baseline.py  test_hybrid.py  test_semantic.py  test_symbolic.py
tests/clustering/: test_clusterer.py
tests/embeddings/: test_generator.py
tests/evaluation/: test_ablation.py  test_cluster_analysis.py  test_coverage.py  test_cross_strategy.py  test_ir_metrics.py  test_sensitivity.py  test_significance.py  test_stability.py
tests/preprocessing/: test_text_cleaner.py
tests/recommendations/: test_generator.py
tests/skills/: conftest.py  test_auxiliary_corpus.py  test_explicit.py  test_implicit.py  test_skill_embeddings.py  test_skill_weights.py
tests/test_dataset_builder/: test_builder.py
(+5 files in other folders)
