[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-programme-market-alignment"
version = "0.1.0"
description = "Study Program Content Mapping to Automatically Mined Market Demands"
requires-python = ">=3.11"
dependencies = [
    # Scraping
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.44",
    "linkedin-jobs-scraper>=5.0",
    # Data handling
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # NLP & preprocessing
    "spacy>=3.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "langdetect>=1.0.9",
    "deep-translator>=1.11",
    "ftfy>=6.2",
    # ESCO ontology
    "rdflib>=7.0",
    # Embeddings & transformers
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "transformers>=4.40,<5",
    # Clustering
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    # Experiment tracking
    "mlflow>=2.12",
    # Utilities
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "loguru>=0.7",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
